# cpp-comment-deleter

./: .gitmodules  CMakeLists.txt
source/: CMakeLists.txt  main.cpp
source/driver/: driver.cpp
source/engine/: context.cpp  context.h  engine.cpp
source/engine/states/: char_litheral.cpp  multiple_line_comment.cpp  program_text.cpp  single_line_comment.cpp  string_litheral.cpp
source/include/: driver.h  engine.h
test/: CMakeLists.txt  driver_test.cpp  engine_test.cpp
test/3pc/: CMakeLists.txt
